--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <li>添加学生</li>
         <li>学生列表</li>
         <li>聊天 -增加聊天</li>
+        <<li>测试将暂存区内容撤销</li>
+        <<li>举手20% -50%</li>
     </ul>
 </body>
 </html>
